// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariableDeclaration initialized 1`] = `
"; ModuleID = 'variable-declaration/initialized.ts'
source_filename = \\"variable-declaration/initialized.ts\\"
target datalayout = \\"e-m:e-p:32:32-i64:64-n32:64-S128\\"
target triple = \\"wasm32-unknown-unknown\\"

@Array_name = private unnamed_addr constant [6 x i8] c\\"Array\\\\00\\"
@Array_type_descriptor = private constant { [6 x i8]* } { [6 x i8]* @Array_name }
@Math_name = private unnamed_addr constant [5 x i8] c\\"Math\\\\00\\"
@Math_type_descriptor = private constant { [5 x i8]* } { [5 x i8]* @Math_name }
@Math_object = private constant { { [5 x i8]* }* } { { [5 x i8]* }* @Math_type_descriptor }
@Math_ptr = private constant { { [5 x i8]* }* }* @Math_object

define void @initializedVariableDeclaration() {
entry:
  %x = alloca i32
  store i32 10, i32* %x, align 4
  ret void
}
"
`;

exports[`VariableDeclaration uninitialized 1`] = `
"; ModuleID = 'variable-declaration/uninitialized.ts'
source_filename = \\"variable-declaration/uninitialized.ts\\"
target datalayout = \\"e-m:e-p:32:32-i64:64-n32:64-S128\\"
target triple = \\"wasm32-unknown-unknown\\"

@Array_name = private unnamed_addr constant [6 x i8] c\\"Array\\\\00\\"
@Array_type_descriptor = private constant { [6 x i8]* } { [6 x i8]* @Array_name }
@Math_name = private unnamed_addr constant [5 x i8] c\\"Math\\\\00\\"
@Math_type_descriptor = private constant { [5 x i8]* } { [5 x i8]* @Math_name }
@Math_object = private constant { { [5 x i8]* }* } { { [5 x i8]* }* @Math_type_descriptor }
@Math_ptr = private constant { { [5 x i8]* }* }* @Math_object

define void @uninitializedVariableDeclaration() {
entry:
  %x = alloca double
  store double 0.000000e+00, double* %x, align 8
  ret void
}
"
`;
